* Added support for auto-mapping ports through ProtonVPN.

--- a/ts.ini
+++ b/ts.ini
@@ -68,3 +68,6 @@ QBT_RESUME_HOUR=2
 # How often to poll the TorrServer log for torrents.
 # Default: every "3" minutes (range 1-10)
 QBT_CHECKS_TIMER=3
+
+# Enable protovpn auto port forwarding
+PROTONVPN_NAT_PMP=true
