* Added mikrotik rule updater to proton vpn automation

--- a/ts.ini
+++ b/ts.ini
@@ -71,3 +71,18 @@ QBT_CHECKS_TIMER=3
 
 # Enable protovpn auto port forwarding
 PROTONVPN_NAT_PMP=true
+
+# Enable mikrotik integration
+# Do not enable if you don't know what you are doing!
+MIKROTIK_INTEGRATION=true
+
+# Mikrotik REST API configuration
+MIKROTIK_ADDRESS="http://10.10.1.1"
+MIKROTIK_USERNAME="admin"
+MIKROTIK_PASSWORD=""
+
+# NAT rule comment
+# This will NOT create any NAT rules on your behalf, only update existing ones
+# You have to create a proper working NAT rule(s) to point to a docker container.
+# The script will update the Dst. Port of the specified rule(s)
+MIKROTIK_NAT_RULE_COMMENT="ProtonVPN"
